home page trasnslition

--- a/locales/ar/home.json
+++ b/locales/ar/home.json
@@ -1,4 +1,4 @@
 {
-    "first":"مبرمج مواقع محترف لاكثر من 3 سنوات من الخبرة في هذا المجال",
+    "first":"مطور مواقع محترف لاكثر من 3 سنوات من الخبرة",
     "btn":"المزيد عني"
 }
