--- a/locales/ar/navbar.json
+++ b/locales/ar/navbar.json
@@ -1,8 +1,9 @@
 {
-  "home": "صفحة الرئيسية",
-  "about": "عني",
-  "contact": "تواصل",
-  "skills": "المهارات",
-  "projects": "مشاريعي",
-  "blog": "مقالاتي"
+    "home":"الرئيسية",
+    "blog":"المدونة",
+    "about":"عني",
+    "contact":"اتصل بي",
+    "language":"اللغة",
+    "english":"الانجليزية",
+    "arabic":"العربية"
 }
